# lleg

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  spell.cmake  variables.cmake
cmake/modules/: fix_llvm_interface_targets.cmake
example/: CMakeLists.txt  tool_example.cpp
include/cmake-init-llvm-fork/: cmake-init-llvm-fork.hpp
include/lleg/: lleg.hpp
ports/llvm/: 0020-fix-cmake-interface-settings.patch  portfile.cmake
source/: cmake-init-llvm-fork.cpp  lleg.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/lit/: lsan_suppressions.txt  tool_example_test.ll
test/lit/passes/: StaticCallCounter_Basic.ll  StaticCallCounter_Loop.ll  StaticCallCounter_NestedCalls.ll  StaticCallCounter_Ptr.ll
test/source/: cmake-init-llvm-fork_test.cpp  lleg_test.cpp
test/tool-src/: cmake-init-llvm-fork_tool_test.cpp  lleg_tool_test.cpp
